# celery_project

./: README.md  docker-compose.yml
project/: main.py  pyproject.toml
project/static/: main.js
project/tests/: test_tasks.py
