[tool.poetry]
name = "celery-example"
version = "0.1.0"
description = ""
authors = ["NoneType"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
celery = "5.3.6"
fastapi = "0.105.0"
flower = "1.2.0"
amqp = "5.2.0"
python-version = "0.0.2"
annotated-types = "0.6.0"
anyio = "3.7.1"
billiard = "4.2.0"
click-didyoumean = "0.3.0"
click-plugins = "1.1.1"
click-repl = "0.3.0"
click = "8.1.7"
colorama = "0.4.6"
humanize = "4.9.0"
idna = "3.6"
kombu = "5.3.4"
prometheus-client = "0.19.0"
prompt-toolkit = "3.0.41"
pydantic-core = "2.14.5"
pydantic = "2.5.2"
python-dateutil = "2.8.2"
pytz = "2023.3.post1"
six = "1.16.0"
sniffio = "1.3.0"
starlette = "0.27.0"
tornado = "6.4"
typing-extensions = "4.9.0"
tzdata = "2023.3"
vine = "5.1.0"
wcwidth = "0.2.12"
aiofiles = "23.1.0"
jinja2 = "3.1.2"
pytest = "7.2.2"
redis = "4.5.4"
requests = "2.28.2"
uvicorn = "0.21.1"
httpx = "0.23.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
